--- a/md_server/testing/test_collapse.html
+++ b/md_server/testing/test_collapse.html
@@ -1,54 +1,49 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
+  <head>
     <title>Collapsible Div</title>
-</head>
-<body>
-
+  </head>
+  <body>
     <style>
-        #toggle {
-            display: none;
-        }
+      #toggle {
+        display: none;
+      }
 
-        #toggle + label {
-            cursor: pointer;
-            display: inline-block;
-            padding: 5px;
-            background-color: #f0f0f0;
-            border-radius: 50px;
-            width: 25px;
-            height: 25px;
-            text-align: center;
-            vertical-align: middle;
-            line-height: 25px;
-            color: #666;
-        }
+      #toggle + label {
+        cursor: pointer;
+        display: inline-block;
+        padding: 5px;
+        background-color: #f0f0f0;
+        border-radius: 50px;
+        width: 25px;
+        height: 25px;
+        text-align: center;
+        vertical-align: middle;
+        line-height: 25px;
+        color: #666;
+      }
 
-        #toggle + label:after {
-            content: '>>>';
-        }
+      #toggle + label:after {
+        content: ">>>";
+      }
 
-        #toggle:checked + label:after {
-            content: '<<<';
-        }
+      #toggle:checked + label:after {
+        content: "<<<";
+      }
 
-        .content {
-            display: none;
-            padding: 10px;
-            margin-top: 5px;
-        }
+      .content {
+        display: none;
+        padding: 10px;
+        margin-top: 5px;
+      }
 
-        #toggle:checked ~ .content {
-            display: block;
-        }
+      #toggle:checked ~ .content {
+        display: block;
+      }
     </style>
 
-    <input type="checkbox" id="toggle">
+    <input type="checkbox" id="toggle" />
     <label for="toggle"></label>
-    <div class="content">
-        This is the collapsible content!
-    </div>
-
-</body>
+    <div class="content">This is the collapsible content!</div>
+  </body>
 </html>
-
